2007-12-07  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/extensions/: Improvements to the properties model, and
	table: This is now one class: PropertiesModel and PropertiesView. They
	both use a enum {} to set the type. There are currently 4 types:
	AtomType, BondType, ConformerType and CartesianType.


2007-12-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/tools/drawtool.cpp: Enhanced custom element
	support. Picking elements from the table will add a new entry and
	select it. Picking elements form the table *already* in the list
	will simply select that element again.

	* scripts/distclean.sh: An enhanced "distclean" script for
	preparing source releases.

	* avogadro/CMakeLists.txt, libavogadro/CMakeLists.txt: Bumped
	version number to 0.3.0b2.

2007-12-06  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/extensions/: You can now fix an atom, the rest will
	follow soon...

	* avogadro/src/extensions/: Added atom and bond properties and a
	cartesian coordinate editor.

	* libavogadro/src/tools/: same for AutoOpt

2007-12-05  Marcus D. Hanwell  <marcus@cryos.org>

	* +libavogadro/src/tools/periodictablegv.h,
	libavogadro/src/tools/periodictablegv.cpp,
	libavogadro/src/tools/CMakeLists.txt,
	libavogadro/src/tools/drawtool.h: Added a new periodic table based
	upon the QGraphicsView. Ported the draw tool to use it.

	* -libavogadro/src/tools/periodictabledialog.*: Removed the old
	periodic table dialog.

2007-12-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/*, avogadro/*: Update headers using script based on
	fixkdeincludes. Removes a *huge* pile of un-needed #include
	statments in both *.h and *.cpp files. Should improve compilation
	time.

2007-12-04  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/extrentions/: Added constraints dialog (see mailing
	list).

2007-12-03  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
